syntax = "proto3";

package sync.pb;

message GroupSyncMessage {
    // 同步步骤
    enum Type {
        INIT = 0; // 初始化，传递groupID过去
        SUMMARY = 1; // 第一步，总摘要        <id1,id2,len>
        RANGE_HASH = 2; // 第二步，区间hash     <id1, id2, hash>
        RANGE_IDS = 3; // 第三步，区间msgid     <id1, id2, msgid...>
        PUSH_MSG = 4; // 第四步，发送消息       <msg...>
        PULL_MSG = 5; // 第五步，获取消息 <id1, id2 ...>
        DONE = 6; // 同步完成
    }


    string  group_id = 1; // 组ID
    Type    type = 2; // 具体步骤
    bytes   payload = 3; // 具体内容
}

// 第一步，总摘要
message GroupMessageSummary  {
    string group_id = 1;
    string head_id = 2;
    string tail_id = 3;
    int32  length = 4;
    uint64 lamptime = 5;
    bool   is_end = 6;
}

// 第二步，区间HASH
message GroupMessageRangeHash  {
    string group_id = 1;
    string start_id = 2;
    string end_id = 3;
    bytes  hash  = 4;
}

// 第三步，区间消息ID
message GroupMessageRangeIDs  {
    string group_id = 1;
    string start_id = 2;
    string end_id = 3;
    repeated string ids = 4;
}

// 第五步，获取缺失消息
message GroupMessagePullMsg {
    repeated string ids = 1;
}