syntax = "proto3";

package syncmsg.pb;


message PeerSyncMessage {
    // 同步步骤
    enum Type {
        SUMMARY = 0; // 第一步，总摘要        <id1,id2,len>
        RANGE_HASH = 1; // 第二步，区间hash     <id1, id2, hash>
        RANGE_IDS = 2; // 第三步，区间msgid     <id1, id2, msgid...>
        PUSH_MSG = 3; // 第四步，发送消息       <msg...>
    }

    Type type = 1; // 具体步骤
    bytes payload = 3; // 具体内容
}

// 第一步，总摘要
message DataSummary  {
	string head_id = 2;
	string tail_id = 3;
	int32  length = 4;
}

// 第二步，区间HASH
message DataRangeHash  {
	string start_id = 1;
	string end_id = 2;
	bytes  hash  = 3;
}

// 第三步，区间消息ID
message DataRangeIDs  {
	string start_id = 1;
	string end_id = 2;
	repeated string ids = 3;
}
